--- a/gui/ble_gui.ui
+++ b/gui/ble_gui.ui
@@ -49,7 +49,7 @@
    <enum>QTabWidget::Rounded</enum>
   </property>
   <property name="currentIndex">
-   <number>0</number>
+   <number>1</number>
   </property>
   <property name="iconSize">
    <size>
@@ -471,10 +471,10 @@
    <widget class="QWidget" name="layoutWidget_2">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>20</y>
-      <width>751</width>
-      <height>381</height>
+      <x>0</x>
+      <y>0</y>
+      <width>781</width>
+      <height>441</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="vl_3">
@@ -485,6 +485,9 @@
       <enum>QLayout::SetDefaultConstraint</enum>
      </property>
      <property name="leftMargin">
+      <number>0</number>
+     </property>
+     <property name="rightMargin">
       <number>0</number>
      </property>
     </layout>
