--- a/gui/ble_gui.ui
+++ b/gui/ble_gui.ui
@@ -459,7 +459,7 @@
      </sizepolicy>
     </property>
     <layout class="QGridLayout" name="gridLayout_8">
-     <item row="0" column="0">
+     <item row="0" column="1">
       <widget class="QLabel" name="lbl_output">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
@@ -480,6 +480,28 @@
        </property>
        <property name="margin">
         <number>0</number>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="0">
+      <widget class="QLabel" name="img_output">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Ignored" vsizetype="Ignored">
+         <horstretch>4</horstretch>
+         <verstretch>6</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+       <property name="pixmap">
+        <pixmap>res/img_cpu_color.png</pixmap>
+       </property>
+       <property name="scaledContents">
+        <bool>true</bool>
+       </property>
+       <property name="margin">
+        <number>10</number>
        </property>
       </widget>
      </item>
