--- a/gui/ble_gui.ui
+++ b/gui/ble_gui.ui
@@ -36,7 +36,7 @@
   </property>
   <property name="font">
    <font>
-    <pointsize>12</pointsize>
+    <pointsize>18</pointsize>
    </font>
   </property>
   <property name="windowTitle">
@@ -109,7 +109,7 @@
       </widget>
      </item>
      <item row="0" column="2" rowspan="2">
-      <widget class="QLabel" name="lbl_ble_short">
+      <widget class="QLabel" name="lbl_ble">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
          <horstretch>7</horstretch>
@@ -122,7 +122,7 @@
         </font>
        </property>
        <property name="text">
-        <string>&lt;bleshort&gt;</string>
+        <string>&lt;ble&gt;</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
@@ -391,7 +391,7 @@
       <x>410</x>
       <y>160</y>
       <width>361</width>
-      <height>261</height>
+      <height>121</height>
      </rect>
     </property>
     <property name="sizePolicy">
@@ -401,6 +401,30 @@
      </sizepolicy>
     </property>
     <layout class="QGridLayout" name="gridLayout_8">
+     <item row="0" column="1">
+      <widget class="QLabel" name="lbl_out">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+         <horstretch>8</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>20</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>Refreshing ...</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignCenter</set>
+       </property>
+       <property name="margin">
+        <number>0</number>
+       </property>
+      </widget>
+     </item>
      <item row="0" column="0">
       <widget class="QLabel" name="img_output">
        <property name="sizePolicy">
@@ -423,51 +447,51 @@
        </property>
       </widget>
      </item>
-     <item row="0" column="1">
-      <widget class="QLabel" name="lbl_output">
+    </layout>
+   </widget>
+   <widget class="QWidget" name="gridLayoutWidget_8">
+    <property name="geometry">
+     <rect>
+      <x>410</x>
+      <y>300</y>
+      <width>361</width>
+      <height>121</height>
+     </rect>
+    </property>
+    <property name="sizePolicy">
+     <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+      <horstretch>0</horstretch>
+      <verstretch>0</verstretch>
+     </sizepolicy>
+    </property>
+    <layout class="QGridLayout" name="gridLayout_9">
+     <item row="0" column="0">
+      <widget class="QLabel" name="lbl_error">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-         <horstretch>13</horstretch>
+         <horstretch>8</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
        <property name="font">
         <font>
-         <pointsize>20</pointsize>
+         <pointsize>18</pointsize>
         </font>
        </property>
+       <property name="frameShape">
+        <enum>QFrame::Box</enum>
+       </property>
        <property name="text">
-        <string>Refreshing ...</string>
+        <string>No issues found</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
        </property>
-       <property name="margin">
-        <number>0</number>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="0" colspan="2">
-      <widget class="QLabel" name="lbl_output_2">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-         <horstretch>8</horstretch>
-         <verstretch>8</verstretch>
-        </sizepolicy>
-       </property>
-       <property name="font">
-        <font>
-         <pointsize>20</pointsize>
-        </font>
-       </property>
-       <property name="text">
-        <string>&lt;debug&gt;</string>
-       </property>
-       <property name="alignment">
-        <set>Qt::AlignCenter</set>
+       <property name="wordWrap">
+        <bool>true</bool>
        </property>
        <property name="margin">
-        <number>0</number>
+        <number>10</number>
        </property>
       </widget>
      </item>
@@ -542,9 +566,9 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>140</y>
+      <y>150</y>
       <width>751</width>
-      <height>281</height>
+      <height>271</height>
      </rect>
     </property>
     <property name="sizePolicy">
@@ -795,10 +819,10 @@
    <widget class="QWidget" name="gridLayoutWidget_3">
     <property name="geometry">
      <rect>
-      <x>230</x>
+      <x>220</x>
       <y>20</y>
-      <width>331</width>
-      <height>101</height>
+      <width>351</width>
+      <height>111</height>
      </rect>
     </property>
     <property name="sizePolicy">
@@ -808,27 +832,8 @@
      </sizepolicy>
     </property>
     <layout class="QGridLayout" name="gridLayout_6">
-     <item row="0" column="0">
-      <widget class="QLabel" name="img_boat_2">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Ignored" vsizetype="Ignored">
-         <horstretch>5</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-       <property name="text">
-        <string/>
-       </property>
-       <property name="pixmap">
-        <pixmap>res/img_boatname.png</pixmap>
-       </property>
-       <property name="scaledContents">
-        <bool>true</bool>
-       </property>
-      </widget>
-     </item>
      <item row="0" column="2">
-      <widget class="QLabel" name="lbl_boatname_2">
+      <widget class="QLabel" name="lbl_boatname">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
          <horstretch>8</horstretch>
@@ -848,6 +853,25 @@
        </property>
        <property name="margin">
         <number>0</number>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="0">
+      <widget class="QLabel" name="img_boat">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Ignored" vsizetype="Ignored">
+         <horstretch>5</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+       <property name="pixmap">
+        <pixmap>res/img_boatname.png</pixmap>
+       </property>
+       <property name="scaledContents">
+        <bool>true</bool>
        </property>
       </widget>
      </item>
