--- a/gui/ble_gui.ui
+++ b/gui/ble_gui.ui
@@ -49,7 +49,7 @@
    <enum>QTabWidget::Rounded</enum>
   </property>
   <property name="currentIndex">
-   <number>0</number>
+   <number>1</number>
   </property>
   <property name="iconSize">
    <size>
@@ -437,7 +437,7 @@
         <string/>
        </property>
        <property name="pixmap">
-        <pixmap>res/img_wait_green.png</pixmap>
+        <pixmap>res/img_wait_black.png</pixmap>
        </property>
        <property name="scaledContents">
         <bool>true</bool>
