--- a/gui/ble_gui.ui
+++ b/gui/ble_gui.ui
@@ -49,7 +49,7 @@
    <enum>QTabWidget::Rounded</enum>
   </property>
   <property name="currentIndex">
-   <number>1</number>
+   <number>0</number>
   </property>
   <property name="iconSize">
    <size>
@@ -415,7 +415,7 @@
         </font>
        </property>
        <property name="text">
-        <string>Refreshing ...</string>
+        <string>Initializing</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
@@ -466,7 +466,7 @@
     </property>
     <layout class="QGridLayout" name="gridLayout_9">
      <item row="0" column="0">
-      <widget class="QLabel" name="lbl_error">
+      <widget class="QLabel" name="lbl_dbg">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
          <horstretch>8</horstretch>
