--- a/gui/ble_gui.ui
+++ b/gui/ble_gui.ui
@@ -37,6 +37,7 @@
   <property name="font">
    <font>
     <pointsize>18</pointsize>
+    <kerning>false</kerning>
    </font>
   </property>
   <property name="windowTitle">
@@ -98,6 +99,7 @@
        <property name="font">
         <font>
          <pointsize>16</pointsize>
+         <kerning>false</kerning>
         </font>
        </property>
        <property name="value">
@@ -119,6 +121,7 @@
        <property name="font">
         <font>
          <pointsize>20</pointsize>
+         <kerning>false</kerning>
         </font>
        </property>
        <property name="text">
@@ -218,6 +221,7 @@
        <property name="font">
         <font>
          <pointsize>20</pointsize>
+         <kerning>false</kerning>
         </font>
        </property>
        <property name="text">
@@ -260,6 +264,7 @@
        <property name="font">
         <font>
          <pointsize>20</pointsize>
+         <kerning>false</kerning>
         </font>
        </property>
        <property name="text">
@@ -306,6 +311,7 @@
        <property name="font">
         <font>
          <pointsize>20</pointsize>
+         <kerning>false</kerning>
         </font>
        </property>
        <property name="text">
@@ -370,6 +376,7 @@
        <property name="font">
         <font>
          <pointsize>20</pointsize>
+         <kerning>false</kerning>
         </font>
        </property>
        <property name="text">
@@ -412,6 +419,7 @@
        <property name="font">
         <font>
          <pointsize>20</pointsize>
+         <kerning>false</kerning>
         </font>
        </property>
        <property name="text">
@@ -476,6 +484,7 @@
        <property name="font">
         <font>
          <pointsize>18</pointsize>
+         <kerning>false</kerning>
         </font>
        </property>
        <property name="frameShape">
@@ -509,9 +518,9 @@
    <widget class="QWidget" name="layoutWidget_2">
     <property name="geometry">
      <rect>
-      <x>0</x>
+      <x>10</x>
       <y>0</y>
-      <width>781</width>
+      <width>771</width>
       <height>431</height>
      </rect>
     </property>
@@ -530,27 +539,71 @@
      </property>
     </layout>
    </widget>
-   <widget class="QLabel" name="lbl_busy_plot">
+   <widget class="QLabel" name="lbl_plt_msg">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>190</y>
-      <width>771</width>
-      <height>31</height>
+      <x>120</x>
+      <y>280</y>
+      <width>551</width>
+      <height>81</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <pointsize>24</pointsize>
-      <weight>50</weight>
-      <bold>false</bold>
+      <pointsize>20</pointsize>
      </font>
     </property>
+    <property name="styleSheet">
+     <string notr="true">background: lightblue;</string>
+    </property>
+    <property name="frameShape">
+     <enum>QFrame::Box</enum>
+    </property>
     <property name="text">
-     <string>...</string>
+     <string>msg_plt</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignCenter</set>
+    </property>
+    <property name="wordWrap">
+     <bool>true</bool>
+    </property>
+   </widget>
+   <widget class="QLabel" name="lbl_plt_bsy">
+    <property name="geometry">
+     <rect>
+      <x>345</x>
+      <y>130</y>
+      <width>100</width>
+      <height>101</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>64</pointsize>
+      <stylestrategy>PreferAntialias</stylestrategy>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true"/>
+    </property>
+    <property name="frameShape">
+     <enum>QFrame::NoFrame</enum>
+    </property>
+    <property name="text">
+     <string>···</string>
+    </property>
+    <property name="textFormat">
+     <enum>Qt::RichText</enum>
+    </property>
+    <property name="scaledContents">
+     <bool>true</bool>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+    <property name="wordWrap">
+     <bool>true</bool>
     </property>
    </widget>
   </widget>
@@ -598,13 +651,14 @@
       <widget class="QLabel" name="label_18">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-         <horstretch>1</horstretch>
+         <horstretch>2</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
        <property name="font">
         <font>
          <pointsize>20</pointsize>
+         <kerning>false</kerning>
         </font>
        </property>
        <property name="text">
@@ -623,11 +677,20 @@
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
+       <property name="font">
+        <font>
+         <pointsize>16</pointsize>
+         <kerning>false</kerning>
+        </font>
+       </property>
        <property name="text">
         <string>-</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
+       </property>
+       <property name="wordWrap">
+        <bool>true</bool>
        </property>
       </widget>
      </item>
@@ -635,17 +698,18 @@
       <widget class="QLabel" name="label_14">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-         <horstretch>1</horstretch>
+         <horstretch>10</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
        <property name="font">
         <font>
          <pointsize>20</pointsize>
+         <kerning>false</kerning>
         </font>
        </property>
        <property name="text">
-        <string> Last seen on</string>
+        <string>Last seen</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
@@ -659,6 +723,12 @@
          <horstretch>1</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>16</pointsize>
+         <kerning>false</kerning>
+        </font>
        </property>
        <property name="text">
         <string>-</string>
@@ -740,6 +810,12 @@
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
+       <property name="font">
+        <font>
+         <pointsize>16</pointsize>
+         <kerning>false</kerning>
+        </font>
+       </property>
        <property name="text">
         <string>-</string>
        </property>
@@ -752,13 +828,14 @@
       <widget class="QLabel" name="label_12">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-         <horstretch>1</horstretch>
+         <horstretch>6</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
        <property name="font">
         <font>
          <pointsize>20</pointsize>
+         <kerning>false</kerning>
         </font>
        </property>
        <property name="text">
@@ -843,6 +920,7 @@
        <property name="font">
         <font>
          <pointsize>20</pointsize>
+         <kerning>false</kerning>
         </font>
        </property>
        <property name="text">
